feat(backend): add health check
