# backend/app/src/gen/pb/api/v1/health/service/HealthService_rb.controller.ts
@@ -1,0 +1,47 @@
+// @generated by protoc-gen-restobuf-nestjs v1 with parameter "target=ts,import_extension=js"
+// @generated from file api/v1/health/service.proto (package api.v1.health, syntax proto3)
+/* eslint-disable */
+
+import { Body, Controller, Param, Post, Query, Req, Res } from "@nestjs/common";
+import { HealthServiceService } from "./HealthService_rb.service";
+import type { JsonObject, JsonValue } from "@bufbuild/protobuf";
+import { fromJson, toJson } from "@bufbuild/protobuf";
+import { Request, Response } from "express";
+import { CheckRequestSchema, CheckResponseSchema } from "../service_pb.js";
+
+@Controller() 
+export class HealthServiceController {
+  constructor(private service: HealthServiceService) {}
+
+  @Post('/api/v1/health')
+  async handleCheck(
+    @Param() pathParams: {[key: string]: string},
+    @Query() queryParams: {[key: string]: string},
+    @Body() body: JsonObject,
+    @Req() req: Request,
+    @Res({ passthrough: true}) res: Response,
+  ): Promise<JsonValue> {
+      body ??= {};
+    for (const key in queryParams) {
+      setMessageField(body, key.split('.'), queryParams[key]);
+    }
+    const input = fromJson(CheckRequestSchema, body);
+    const output = await this.service.handleCheck(input, req, res);
+    return toJson(CheckResponseSchema, output);
+  }
+
+}
+
+function setMessageField(message: JsonObject, fieldPath: string[], value: string): JsonValue {
+    if(fieldPath.length === 0) {
+        throw new Error("fieldPath must not be empty");
+    }
+    const [field, ...rest] = fieldPath;
+    if (fieldPath.length === 1) {
+        message[field] = value;
+        return message;
+    }else {
+        message[field] ??= {};
+        return setMessageField(message[field] as JsonObject , rest, value);
+    }
+}
