# backend/app/src/gen/pb/api/v1/health/service/HealthService_rb.service.ts
@@ -1,0 +1,12 @@
+// @generated by protoc-gen-restobuf-nestjs v1 with parameter "target=ts,import_extension=js"
+// @generated from file api/v1/health/service.proto (package api.v1.health, syntax proto3)
+/* eslint-disable */
+
+import { Injectable } from "@nestjs/common";
+import type { CheckRequest, CheckResponse } from "../service_pb.js";
+import { Request, Response } from "express";
+
+@Injectable() 
+export abstract class HealthServiceService {
+  abstract handleCheck(input: CheckRequest, req: Request, res: Response): Promise<CheckResponse>;
+}
